# rekindled-server

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  DarkSouls2.Dockerfile  DarkSouls3.Dockerfile  README.md  README_zhCN.md  default.nix  docker-compose.yml  sonar-project.properties
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  copilot-setup-steps.yml  master-server-release.yml  release.yml  run-dependabot.yml  sonarqube.yml
Resources/: ReadMe.txt
Source/: CMakeLists.txt
Source/Injector/: CMakeLists.txt  Entry.cpp  HookManager.cpp  HookManager.h  InjectorContext.h  ShutdownSignal.cpp  ShutdownSignal.h
Source/Injector/Config/: RuntimeConfig.cpp  RuntimeConfig.h
Source/Injector/Hooks/: Hook.h
Source/Injector/Hooks/DarkSouls2/: DS2_LogProtobufsHook.cpp  DS2_LogProtobufsHook.h  DS2_ReplaceServerAddressHook.cpp  DS2_ReplaceServerAddressHook.h
Source/Injector/Hooks/DarkSouls3/: DS3_ReplaceServerAddressHook.cpp  DS3_ReplaceServerAddressHook.h
Source/Injector/Hooks/Shared/: ChangeSaveGameFilenameHook.cpp  ChangeSaveGameFilenameHook.h  ReplaceServerPortHook.cpp  ReplaceServerPortHook.h
Source/Injector/Injector/: Injector.cpp  Injector.h
Source/Injector/Tests/: CMakeLists.txt  HookManagerTests.cpp  InjectorInitTests.cpp  InjectorTestsMain.cpp
Source/Loader/: App.config  CMakeLists.txt  Directory.Build.props  Loader.csproj  Program.cs  ProgramSettings.Designer.cs  ProgramSettings.settings
Source/Loader.Tests/: ConfigLauncherServerQueryServiceTests.cs  Loader.Tests.csproj  MainFormAsyncTests.cs
Source/Loader/Api/: HubApi.cs  MasterServerApi.cs  WebUiApi.cs
Source/Loader/Config/: BuildConfig.cs  InjectionConfig.cs  ServerConfig.cs
Source/Loader/Forms/: CreateServerDialog.cs  MainForm.Designer.cs  MainForm.Extracted.cs  MainForm.cs  MainForm.resx  PasswordDialog.cs  ServerListViewUpdater.cs  ServerLoginDetailsDialog.cs  SettingsForm.Designer.cs  SettingsForm.cs  SettingsForm.resx
Source/Loader/Properties/: AssemblyInfo.cs
Source/Loader/Properties/PublishProfiles/: FolderProfile.pubxml
Source/Loader/Services/: ConfigService.cs  Launcher.cs  ServerListManager.cs  ServerQueryService.cs
Source/Loader/Tests/: ConfigLauncherServerQueryServiceTests.cs  LauncherTests.cs  MainFormAsyncTests.cs  ServerListManagerTests.cs  ServerListViewUpdaterTests.cs
Source/Loader/Utils/: EncryptionUtils.cs  ExeUtils.cs  NetUtils.cs  PatchingUtils.cs  SteamUtils.cs  WinAPI.cs
Source/LoaderTests/: ServerListManagerTests.cs  ServerListViewUpdaterTests.cs
Source/MasterServer/: Dockerfile  package-lock.json  package.json
Source/MasterServer/src/: index.js
Source/MasterServer/src/config/: config.json  index.js
Source/MasterServer/src/routes/api/v1/: servers.js
Source/MasterServer/src/templates/: dashboard.ejs
Source/MasterServer/src/test/: servers.test.js
Source/MasterServer/src/utils/: helpers.js
Source/Server/: CMakeLists.txt  Entry.cpp
Source/Server.DarkSouls2/: CMakeLists.txt
Source/Server.DarkSouls2/Server/GameService/GameManagers/Ghosts/: DS2_GhostManager.cpp
Source/Server.DarkSouls2/Server/GameService/GameManagers/PlayerData/: DS2_PlayerDataManager.cpp
Source/Server.DarkSouls2/Server/GameService/Utils/: DS2_CellAndAreaId.h  DS2_NRSSRSanitizer.h
Source/Server.DarkSouls3/: CMakeLists.txt
Source/Server.DarkSouls3/Server/GameService/GameManagers/PlayerData/: DS3_PlayerDataManager.cpp
Source/Server/Client/: Client.cpp  Client.h
Source/Server/Config/: RuntimeConfig.cpp  RuntimeConfig.h
Source/Server/Server/: Server.cpp
Source/Server/Server/Database/: ServerDatabase.cpp
Source/Shared/: CMakeLists.txt
Source/Shared/Core/Network/: NetUtils.cpp
Source/Shared/Core/Utils/: PlayerDataUtils.h  Strings.cpp  Strings.h
Source/Shared/Game/: PlayerDataUtils.h
Source/Shared/Platform/Linux/: LinuxPlatform.cpp
Source/Shared/Platform/Win32/: Win32Platform.cpp
Source/Shared/Tests/: CMakeLists.txt  PlayerDataUtilsTests.cpp
Source/WebUI/Static/: index.html
Source/WebUI/Static/js/: dialog-polyfill.js  lang.js  main.js
Source/WebUI/Static/locales/: default.json  en-US.json  zh-CN.json
Source/hub/: package-lock.json  package.json
Source/hub/src/routes/api/v1/: servers.js
Tools/: format-files.ps1  format-files.sh  generate_package_linux.sh  generate_package_windows.bat  generate_vs2022.bat  gh_action_run_to_toon.ps1
Tools/Utilities/: fetch_code_scanning_alerts.py
Tools/Utilities/notebooks/: protobuf_packet_investigation.ipynb
